Documentacion de la api mejorada
